--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>velocity</artifactId>
       <version>1.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>8.3-603.jdbc4</version>
+    </dependency>
   </dependencies>
   <properties>
     <clojure.version>1.0.0</clojure.version>
