--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -24,7 +24,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
 <!--        <executions>
           <execution>
             <id>compile-clojure</id>
@@ -42,6 +42,7 @@
             <testSourceDirectory>src/test/clojure</testSourceDirectory>
           </testSourceDirectories>
           <script>src/main/clojure/script.clj</script>
+<!--          <replScript>src/main/clojure/script.clj</replScript>-->
         </configuration>
       </plugin>
 <!--      <plugin>
