--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -14,7 +14,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
         <configuration>
           <sourceDirectories>
             <sourceDirectory>src/main/clojure</sourceDirectory>
@@ -23,6 +23,7 @@
             <testSourceDirectory>src/test/clojure</testSourceDirectory>
           </testSourceDirectories>
           <script>src/main/clojure/script.clj</script>
+<!--          <replScript>src/main/clojure/script.clj</replScript>-->
         </configuration>
       </plugin>
     </plugins>
