--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -14,7 +14,7 @@
       <plugin>
         <groupId>com.theoryinpractise</groupId>
         <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
         <configuration>
           <sourceDirectories>
             <sourceDirectory>src/main/clojure</sourceDirectory>
@@ -43,6 +43,11 @@
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>8.3-603.jdbc4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.codestuffs.clojure</groupId>
+      <artifactId>swank-clojure</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <properties>
